Bug 40332 - [Sandybridge] Video playback crashes X.org / GPU hung
Summary: [Sandybridge] Video playback crashes X.org / GPU hung
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-23 22:50 UTC by Elias Probst
Modified: 2011-08-25 11:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
i915_error_state (2.05 MB, application/octet-stream)
2011-08-23 22:50 UTC, Elias Probst
no flags Details

Description Elias Probst 2011-08-23 22:50:21 UTC
Created attachment 50514 [details]
i915_error_state

When playing back a video, some artefacts of the video begin to appear in the upper left corner of the screen after some seconds, then X.org crashes and sometimes even makes the whole system hang (a ~0.25sec sound loop of the movie keeps playing over and over again) when not switching fast enough to a VT.

dmesg reports a GPU hung:
[drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... GPU hung                                
[drm] capturing error event; look for more information in /debug/dri/0/i915_error_state                
[drm:i915_wait_request] *ERROR* i915_wait_request returns -11 (awaiting 6614 at 6610, next 6615)

i915_error_state content is attached.

Window Manager: kwin (compositing disabled)

Used software:
xorg-server git ac2c307f
xf86-video-intel git d330f375
libdrm git 2acaf160
libXv git 7091e73f
libXvMC git 4f64c8dd
Comment 1 Elias Probst 2011-08-23 22:52:55 UTC
Additional information:

SNA is enabled in xf86-video-intel
Kernel is 3.0.3

Using libva 0.32.0, but it seems the problem is not related to libva as it even happens for non-accelerated content (e.g. webcam video output in Skype).
Comment 2 Chris Wilson 2011-08-25 10:57:10 UTC
0x0770635c:      0x7b003c04: 3DPRIMITIVE: rect list sequential
0x07706360:      0xfffffffc:    vertex count
0x07706364:      0x00000018:    start vertex
0x07706368:      0x00000001:    instance count
0x0770636c:      0x00000000:    start instance
0x07706370:      0x00000000:    index bias

How many vertices?
Comment 3 Chris Wilson 2011-08-25 11:57:08 UTC
commit 786a770f528a0daee2971494352672cb89f48384
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Aug 25 19:52:13 2011 +0100

    sna/video: Flush the video state at the end of the operation
    
    Or in the case where a second command is received prior to the batch
    being flushed, the vertex data is not flushed and leads to the a
    miscompution of the number of vertices emitted.
    
    Reported-by: Elias Probst <mail@eliasprobst.eu>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=40332
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.