src/sna/gen7_render.c
@@ -2033,6 +2033,8 @@ gen7_render_video(struct sna *sna,
 		box++;
 	}
 
+	gen7_vertex_flush(sna);
+	_kgem_set_mode(&sna->kgem, KGEM_RENDER);
 	return TRUE;
 }
 
